src/test/compile-fail/attempted-access-non-fatal.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Check that bogus field access is non-fatal
fn main() {
    let x = 0;
    let _ = x.foo; //~ ERROR attempted access of field
    let _ = x.bar; //~ ERROR attempted access of field
}
